fixup! squash! Bug 27476: Implement about:torconnect captive portal within Tor Browser
Improved the progressbar style

--- a/browser/components/torconnect/content/aboutTorConnect.css
+++ b/browser/components/torconnect/content/aboutTorConnect.css
@@ -203,29 +203,60 @@ input[type="checkbox"]:not(:disabled):active:checked {
 }
 
 :root {
-  --progressbar-shadow-start: rgba(255, 255, 255, 0.85);
+  --progressbar-shadow-start: rgba(255, 255, 255, 0.7);
+  --progressbar-gradient: linear-gradient(90deg, #FC00FF 0%, #00DBDE 50%, #FC00FF 100%);
 }
 
 @media (-moz-toolbar-prefers-color-scheme: dark) {
   :root {
-    --progressbar-shadow-start: rgba(28, 27, 34, 0.85);
+    --progressbar-shadow-start: rgba(28, 27, 34, 0.7);
   }
 }
 
-#progressBackground {
-  position:fixed;
-  padding:0;
-  margin:0;
-  top:0;
-  left:0;
+#progressBar {
+  position: fixed;
+  top: 0;
+  inset-inline-start: 0;
   width: 0%;
-  height: 40px;
-  background-image:
-    linear-gradient(transparent 17.5%, var(--progressbar-shadow-start) 17.5%, var(--in-content-page-background) 100%),
-    linear-gradient(90deg, #FC00FF 0%, #00DBDE 50%, #FC00FF 100%);
-  background-size: 100%, 200%;
-  border-radius: 0;
+  padding: 0;
+  margin: 0;
   animation: progressAnimation 5s ease infinite;
+}
+
+#progressBackground {
+  height: 66px;
+  margin-top: -26px;
+  background-image:
+    linear-gradient(var(--progressbar-shadow-start), var(--in-content-page-background) 100%),
+    var(--progressbar-gradient);
+  background-position: inherit;
+  filter: blur(5px);
+  border-end-end-radius: 33px;
+}
+
+#progressSolid {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 7px;
+  background-image: var(--progressbar-gradient);
+  background-position: inherit;
+}
+
+#progressBackground, #progressSolid {
+  background-size: 200% 100%;
+}
+
+@keyframes progressAnimation {
+  0% {
+    background-position: 200%;
+  }
+  50% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: 0%;
+  }
 }
 
 @keyframes progressAnimation {
